fix home not centered pics

--- a/src/components/Home/HomeGallery.css
+++ b/src/components/Home/HomeGallery.css
@@ -1,13 +1,13 @@
 /* HomeGallery.css */
 
-.gallery-container {
+.home-gallery-container {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  .gallery-buttons {
+  .home-gallery-buttons {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -17,7 +17,7 @@
     padding: 0 20px; /* Adjust the padding as needed */
   }
   
-  .gallery-buttons button {
+  .home-gallery-buttons button {
     background-color: #fff;
     border: 1px solid #333;
     border-radius: 5px;
@@ -28,7 +28,7 @@
     transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
   }
   
-  .gallery-buttons button:hover {
+  .home-gallery-buttons button:hover {
     background-color: #333;
     color: #fff;
   }
